--- a/polycoid/filmliste/static/filmliste/style.css
+++ b/polycoid/filmliste/static/filmliste/style.css
@@ -1,3 +1,125 @@
 * {
-  color: red;
+  outline: 1px solid red;
+}
+
+:root {
+  --padding-left: 4%;
+  --padding-right: 4%;
+  --c-bg: rgb(24, 24, 24);
+  --c-acc: red;
+  --c-txt: rgb(223, 223, 223);
+}
+
+html,
+body {
+  margin: 0;
+  box-sizing: border-box;
+  background-color: var(--c-bg);
+  font-family: Tahoma, sans-serif; /* web safe fallback font */
+  font-size: 1.3vw;
+}
+
+.main {
+  height: auto;
+  width: 100vw;
+  background-color: var(--c-bg);
+}
+
+.nav {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  display: flex;
+  padding-left: var(--padding-left);
+  padding-right: var(--padding-right);
+  background-color: var(--c-bg);
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.nav .home {
+  color: var(--c-acc)
+}
+
+.nav .search {
+  margin-left: auto;
+  color: var(--c-txt);
+}
+
+.nav .profile {
+  color: var(--c-txt);
+}
+
+
+.front {
+  height: 90vh;
+  
+  color: var(--c-txt);
+  z-index: 0;
+  position: relative;
+}
+
+.front .bg {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-image: url("images/potc.jpg");
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  filter: blur(100px);
+  z-index: -1;
+}
+
+.front .content {
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 100%;
+  position: relative;
+  padding-left: var(--padding-left);
+  padding-right: var(--padding-right);
+  display: flex;
+	justify-content: center;
+	align-items: center;
+  padding-right: var(--padding-right);
+}
+
+.front .content .info {
+  color: var(--c-txt);
+  display: flex;
+  flex-direction: column;
+  padding-right: 30%;
+}
+
+.front .content .info .title .title {
+  font-size: 250%;
+}
+.front .content .info .title .sub {
+  font-size: 150%;
+}
+
+.front .content .pic {
+  height: 10px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.front .content .pic img {
+  height: 80%;
+}
+
+.started {
+  height: 80%;
+}
+
+.future{
+  height: 20vh;
+}
+
+.done {
+  height: 20vh;
 }
