--- a/filmliste/static/filmliste/styles/list_overview.css
+++ b/filmliste/static/filmliste/styles/list_overview.css
@@ -1,6 +1,7 @@
 :root {
   --padding-left: 4%;
   --padding-right: 4%;
+  --padding-top: 0.67em;
   --c-bg: rgb(24, 24, 24);
   --c-bg-a: rgba(24, 24, 24, 0.75);
   --c-acc: red;
@@ -16,13 +17,17 @@
   --c-tier-done: #90dc6e;
 }
 
-/* 
- * GENERALLS
+/*
+ *
+ *  ========
+ *  GENERALS
+ *  ========
+ *
  */
 
-/* * {
+* {
   outline: 1px solid red;
-} */
+}
 
 html,
 body {
@@ -45,8 +50,36 @@ a {
   color: inherit;
 }
 
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  width: auto;
+  height: auto;
+}
+
+input[type='text'] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: text;
+  outline: inherit;
+  width: auto;
+  height: auto;
+}
+
 /*
- * SPECIFICS
+ *
+ *  =========
+ *  SPECIFICS
+ *  =========
+ *
  */
 
 .main {
@@ -61,6 +94,14 @@ a {
     var(--c-txt) 600%
   );
 }
+
+/*
+ *
+ *  ======
+ *  NAVBAR
+ *  ======
+ *
+ */
 
 .nav {
   position: sticky;
@@ -126,47 +167,187 @@ a {
   stroke-width: var(--svg-stroke-thickness);
 }
 
+/*
+ *
+ *  ======
+ *  CONTENT
+ *  ======
+ *
+ */
+
+/* general box styling */
 .box {
+  padding-top: var(--padding-top);
   padding-left: var(--padding-left);
   padding-right: var(--padding-right);
+  min-height: 30vh;
+  display: flex;
+  flex-direction: column;
 }
 
+/* box heading */
+
+.box h1 {
+  margin: 0;
+  padding: 0;
+  margin-right: auto;
+  font-size: 1em;
+}
+
+.box .head {
+  margin-top: 0;
+  margin-bottom: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 2em;
+  width: 100%;
+  font-size: 2em;
+}
+
+/* symbol in box heading */
+
+.box .head .symbol {
+  margin-left: 0.5em;
+}
+
+.box .head .symbol,
+.box .head .symbol button {
+  min-height: 1em;
+  min-width: 1em;
+}
+
+.box .head .symbol button {
+  display: grid;
+}
+
+.box .head .symbol button * {
+  stroke: var(--c-txt);
+  stroke-width: 0.05em;
+}
+
+.box .head .symbol button:hover * {
+  stroke: var(--c-txt-scnd);
+}
+
+/* Search  */
+
+.box .head .search .search-container {
+  position: relative;
+  display: flex;
+}
+
+.box .head .search .search-box {
+  width: 0px;
+  height: 1em;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.box .head .search .search-box input {
+  font-size: 0.5em;
+  width: 100%;
+  height: 100%;
+}
+
+.box .head .search .search-box .close-list {
+  height: 100%;
+  width: auto;
+}
+
+.box .head .search .search-box .close-list * {
+  stroke: var(--c-txt);
+  stroke-width: 0.05em;
+}
+
+/* gen box layout */
+
+.box p {
+  padding: 0;
+  margin: 0;
+}
+
+.box .container {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.box .container .none {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-grow: 1;
+  color: var(--c-txt-scnd);
+}
+
+.box .container .none .pic {
+  display: flex;
+  flex-grow: 2;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.box .container .none .pic .list-symbol {
+  height: auto;
+  width: 5em;
+}
+
+.box .container .none .pic .list-symbol * {
+  stroke: var(--c-txt-scnd);
+}
+
+.box .container .none .txt {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+/* specifc boxes */
 .promote.box {
-  height: 30vh;
+  min-height: 40vh;
   color: var(--c-txt);
   z-index: 0;
   position: relative;
 }
 
 .my-lists.box {
-  height: 30vh;
-
   color: var(--c-txt);
   z-index: 0;
   position: relative;
 }
 
 .browse-lists.box {
-  height: 30vh;
   color: var(--c-txt);
   z-index: 0;
   position: relative;
 }
 
 .my-titles.box {
-  height: 30vh;
   color: var(--c-txt);
   z-index: 0;
   position: relative;
 }
 
-/* Footer */
+/*
+ *
+ *  ======
+ *  FOOTER
+ *  ======
+ *
+ */
+
 .footer {
   position: relative;
   bottom: 0;
   z-index: 100;
-  padding-left: var(--padding-left);
-  padding-right: var(--padding-right);
   background-color: var(--c-bg);
   height: auto;
   display: flex;
@@ -174,9 +355,8 @@ a {
   /* justify-content: center; */
   align-items: flex-start;
   /* padding-top: 1em; */
-  padding-bottom: 1em;
-  padding-left: 15em;
-  padding-right: 15em;
+  padding: 0em 20em 1em;
+  margin-top: 1em;
 }
 
 .footer a:hover {
