--- a/filmliste/templates/filmliste/list_overview.html
+++ b/filmliste/templates/filmliste/list_overview.html
@@ -1,166 +1,214 @@
-{% load static %}
+{% load static %} {% load svg %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet"
-            href="{% static 'filmliste/styles/list_overview.css' %}" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{% static 'filmliste/styles/list_overview.css' %}"
+    />
+    <script src="{% static 'filmliste/scripts/thirdparty/jquery-3.7.1.min.js' %}"></script>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-            rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
 
-        <!-- Icons from https://iconoir.com -->
+    <!-- Icons from https://iconoir.com -->
+    <script src="{% static 'filmliste/scripts/ui.js' %}" defer></script>
+    <title>Document</title>
+  </head>
+  <body>
+    {% comment %} {% if user.is_authenticated %} YOURE LOGGED IN {% else %} not
+    logoed in :( {% endif %} shows lsit and overview {% if user.profile_picture
+    %}
+    <img src="{{ user.profile_picture.url }}" alt="Profile Picture" />
+    {% else %}
+    <p>No profile picture uploaded yet.</p>
+    {% endif %} {% endcomment %}
 
-        <title>Document</title>
-    </head>
-    <body>
-        {% comment %} {% if user.is_authenticated %}
-        YOURE LOGGED IN
-        {% else %}
-        not logoed in :(
-        {% endif %}
-        shows lsit and overview
-
-        {% if user.profile_picture %}
-        <img src="{{ user.profile_picture.url }}" alt="Profile Picture">
-        {% else %}
-        <p>No profile picture uploaded yet.</p>
-        {% endif %} {% endcomment %}
-
-        <div class="main">
-            <div class="nav">
-                <div class="home"><a href="#promote"
-                        tabindex="0">Filmliste</a></div>
-                <div class="my-lists nav-item">
-                    <a href="#my-lists" tabindex="1" class="active">My Lists</a>
-                </div>
-                <div class="browse-lists nav-item">
-                    <a href="#browse-lists" tabindex="1">Browse Lists</a>
-                </div>
-                <div class="all-titles nav-item">
-                    <a href="#my-titles" tabindex="1">My Titles</a>
-                </div>
-                <div class="profile">
-                    <div class="symbol">
-                        <?xml version="1.0" encoding="UTF-8"?><svg
-                            stroke-width="1.5"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                            color="#000000">
-                            <path
-                                d="M5 20V19C5 15.134 8.13401 12 12 12V12C15.866 12 19 15.134 19 19V20"
-                                stroke="#000000"
-                                stroke-width="1.5"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                            <path
-                                d="M12 12C14.2091 12 16 10.2091 16 8C16 5.79086 14.2091 4 12 4C9.79086 4 8 5.79086 8 8C8 10.2091 9.79086 12 12 12Z"
-                                stroke="#000000"
-                                stroke-width="1.5"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="promote box" id="promote">this is bla bla bla</div>
-            <div class="my-lists box" id="my-lists">
-                <h1>My Lists</h1>
-            </div>
-            <div class="browse-lists box" id="browse-lists">
-                <h1>Browse Lists</h1>
-            </div>
-            <div class="my-titles box" id="my-titles">
-                <h1>My Titles</h1>
-            </div>
-            <!-- <div class="footer">
-                <div class="content">
-                    <div class="legal">
-                        <h3 class="filmliste">Filmliste</h3>
-                        <ul>
-                            <li><a href="#impressum">Impressum</a></li>
-                            <li><a
-                                    href="#datenschutz">Datenschutzerklärung</a></li>
-                        </ul>
-                    </div>
-                    <div class="tmdb">
-                        <h3><img
-                                src="{% static 'filmliste/images/tmdb_logo.svg' %}"
-                                alt="The Movie Database">
-                        </h3>
-                        <ul>
-                            <li><a href="https://www.themoviedb.org/">Visit
-                                    their site</a></li>
-                            <li> This product uses the TMDB API but is not
-                                endorsed or certified
-                                by TMDB.
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="just-watch">
-                        <h3>
-                            <img
-                                src="{% static 'filmliste/images/JustWatch_logo.webp' %}"
-                                alt="JustWatch">
-                        </h3>
-                        <ul>
-                            <li><a href="https://www.justwatch.com/">Visit their
-                                    site</a></li>
-                            <li> This product uses data originating from, but is
-                                not endorsed by,
-                                JustWatch.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div> -->
-            <div class="footer">
-                <div class="footer-col">
-                    <div class="h3 filmliste">
-                        <a href>Filmliste</a>
-                    </div>
-                    <ul>
-                        <li><a href="#impressum">Impressum</a></li>
-                        <li><a href="#daten"> Datenschutzerklärung</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <div class="h3">
-                        <a href="https://www.themoviedb.org/">
-                            <img
-                                src="{% static 'filmliste/images/tmdb_logo.svg' %}"
-                                alt="The Movie Database">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="https://www.themoviedb.org/">Visit
-                                their site</a></li>
-                        <li>This product uses the TMDB API but is not
-                            endorsed or certified
-                            by TMDB.</li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <div class="h3">
-                        <a href="https://www.justwatch.com/">
-                            <img
-                                src="{% static 'filmliste/images/JustWatch_logo.webp' %}"
-                                alt="JustWatch">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="https://www.justwatch.com/">Visit their
-                                site</a></li>
-                        <li>This product uses data originating from, but is
-                            not endorsed by,
-                            JustWatch.</li>
-                    </ul>
-                </div>
-            </div>
+    <div class="main">
+      <div class="nav">
+        <div class="home"><a href="#promote" tabindex="0">Filmliste</a></div>
+        <div class="my-lists nav-item">
+          <a href="#my-lists" tabindex="1" class="active">My Lists</a>
         </div>
-    </body>
+        <div class="browse-lists nav-item">
+          <a href="#browse-lists" tabindex="1">Browse Lists</a>
+        </div>
+        <div class="all-titles nav-item">
+          <a href="#my-titles" tabindex="1">My Titles</a>
+        </div>
+        <div class="profile">
+          <div class="symbol">
+            <!-- icons: https://iconoir.com -->
+            <?xml version="1.0" encoding="UTF-8"?><svg
+              stroke-width="1.5"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              color="#000000"
+            >
+              <path
+                d="M5 20V19C5 15.134 8.13401 12 12 12V12C15.866 12 19 15.134 19 19V20"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                d="M12 12C14.2091 12 16 10.2091 16 8C16 5.79086 14.2091 4 12 4C9.79086 4 8 5.79086 8 8C8 10.2091 9.79086 12 12 12Z"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="promote box" id="promote">this is bla bla bla</div>
+      <div class="my-lists box" id="my-lists">
+        <div class="head">
+          <h1>My Lists</h1>
+          <div class="add-list">
+            <div class="symbol">
+              <button>
+                {% svg "filmliste/playlist-plus" class="add-list" %}
+              </button>
+            </div>
+          </div>
+          <div class="search">
+            <div class="search-container">
+              <div class="symbol">
+                <button>
+                  {% svg "filmliste/input-search" class="search-list" %}
+                </button>
+              </div>
+              <div class="search-box">
+                <input
+                  type="text"
+                  name="tobechangedfromdjango"
+                  id="my-lists-search"
+                />
+                {% svg "filmliste/xmark" class="close-list" %}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="none">
+            <div class="pic">
+              {% svg 'filmliste/server' class="list-symbol" %}
+            </div>
+            <div class="txt">
+              <p>You are not part of any list.</p>
+              <p>Start a new list or browse other lists.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="browse-lists box" id="browse-lists">
+        <div class="head">
+          <h1>Browse Lists</h1>
+          <div class="search">
+            <div class="symbol">
+              <button>
+                {% svg "filmliste/input-search" class="search-list" %}
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="none">
+            <div class="pic">
+              {% svg 'filmliste/server' class="list-symbol" %}
+            </div>
+            <div class="txt">
+              <p>There aren't any lists available to browse.</p>
+              <p>Ask a friend to create one.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="my-titles box" id="my-titles">
+        <div class="head">
+          <h1>My Titles</h1>
+          <div class="add-list">
+            <div class="symbol">
+              <button>
+                {% svg "filmliste/playlist-plus" class="add-list" %}
+              </button>
+            </div>
+          </div>
+          <div class="search">
+            <div class="symbol">
+              <button>
+                {% svg "filmliste/input-search" class="search-list" %}
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="none">
+            <div class="pic">
+              {% svg 'filmliste/server' class="list-symbol" %}
+            </div>
+            <div class="txt">
+              <p>You haven't interacted with any title yet.</p>
+              <p>Add a title to a list to see progress.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer-col">
+          <div class="h3 filmliste">
+            <a href>Filmliste</a>
+          </div>
+          <ul>
+            <li><a href="#impressum">Impressum</a></li>
+            <li><a href="#daten"> Datenschutzerklärung</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <div class="h3">
+            <a href="https://www.themoviedb.org/">
+              <img
+                src="{% static 'filmliste/images/tmdb_logo.svg' %}"
+                alt="The Movie Database"
+              />
+            </a>
+          </div>
+          <ul>
+            <li><a href="https://www.themoviedb.org/">Visit their site</a></li>
+            <li>
+              This product uses the TMDB API but is not endorsed or certified by
+              TMDB.
+            </li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <div class="h3">
+            <a href="https://www.justwatch.com/">
+              <img
+                src="{% static 'filmliste/images/JustWatch_logo.webp' %}"
+                alt="JustWatch"
+              />
+            </a>
+          </div>
+          <ul>
+            <li><a href="https://www.justwatch.com/">Visit their site</a></li>
+            <li>
+              This product uses data originating from, but is not endorsed by,
+              JustWatch.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
