--- a/filmliste/static/filmliste/styles/list_overview.css
+++ b/filmliste/static/filmliste/styles/list_overview.css
@@ -11,10 +11,10 @@
   --hover-t: 50ms;
   --hover-b: 75%;
   --img-corner: 0.3em;
-  --svg-stroke-thickness: 0.2em;
   --c-tier-started: #f6b26b;
   --c-tier-remaining: rgb(76, 76, 76);
   --c-tier-done: #90dc6e;
+  --symbol-width: 1.8px;
 }
 
 /*
@@ -26,6 +26,11 @@
  */
 
 * {
+  box-sizing: border-box;
+  /* outline: 1px solid red; */
+}
+
+*:focus {
   outline: 1px solid red;
 }
 
@@ -36,7 +41,7 @@ body {
   background-color: var(--c-bg);
   font-family: Tahoma, sans-serif; /* web safe fallback font */
   /* font-size: 1.3vw; */
-  font-size: calc(10px + 0.6vw);
+  font-size: max(15px, 0.8vw);
 }
 
 img,
@@ -74,6 +79,10 @@ input[type='text'] {
   height: auto;
 }
 
+.hidden {
+  display: none;
+}
+
 /*
  *
  *  =========
@@ -106,7 +115,7 @@ input[type='text'] {
 .nav {
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -164,7 +173,7 @@ input[type='text'] {
 
 .nav > .profile > .symbol > svg path {
   stroke: var(--c-txt);
-  stroke-width: var(--svg-stroke-thickness);
+  stroke-width: var(--symbol-width);
 }
 
 /*
@@ -180,7 +189,7 @@ input[type='text'] {
   padding-top: var(--padding-top);
   padding-left: var(--padding-left);
   padding-right: var(--padding-right);
-  min-height: 30vh;
+  /* min-height: 30vh; */
   display: flex;
   flex-direction: column;
 }
@@ -223,7 +232,7 @@ input[type='text'] {
 
 .box .head .symbol button * {
   stroke: var(--c-txt);
-  stroke-width: 0.05em;
+  stroke-width: var(--symbol-width);
 }
 
 .box .head .symbol button:hover * {
@@ -248,17 +257,28 @@ input[type='text'] {
 .box .head .search .search-box input {
   font-size: 0.5em;
   width: 100%;
-  height: 100%;
+  height: 1.4em;
+  margin-left: 0.7em;
+  margin-right: 0.5em;
+  border-bottom: 1px solid var(--c-txt);
 }
 
-.box .head .search .search-box .close-list {
+.box .head .search .search-box input::placeholder {
+  color: var(--c-txt-scnd);
+}
+
+.box .head .search .search-box button,
+.box .head .search .search-box button .close-list {
   height: 100%;
   width: auto;
 }
 
 .box .head .search .search-box .close-list * {
   stroke: var(--c-txt);
-  stroke-width: 0.05em;
+  stroke-width: var(--symbol-width);
+}
+.box .head .search .search-box button:hover .close-list * {
+  stroke: var(--c-txt-scnd);
 }
 
 /* gen box layout */
@@ -310,7 +330,12 @@ input[type='text'] {
   align-items: center;
 }
 
-/* specifc boxes */
+/*\
+ * ===========
+ * Promote Box
+ * ===========
+\*/
+
 .promote.box {
   min-height: 40vh;
   color: var(--c-txt);
@@ -318,11 +343,81 @@ input[type='text'] {
   position: relative;
 }
 
+/*\
+ * ============
+ * My Lists Box
+ * ============
+\*/
+
 .my-lists.box {
   color: var(--c-txt);
   z-index: 0;
   position: relative;
 }
+
+.my-lists.box .card-container {
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  gap: 1.5em;
+}
+
+.my-lists.box .title-card {
+  box-sizing: border-box;
+  height: 14.5em;
+  aspect-ratio: 3/4;
+  background-color: hsla(0, 100%, 50%, 1);
+  background-image: radial-gradient(
+      at 40% 20%,
+      hsla(28, 100%, 74%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+  z-index: 100;
+  border-radius: var(--b-corner);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.my-lists.box .title-card .text,
+.my-lists.box .title-card .text-mirror {
+  color: var(--c-txt);
+  padding: 0.2em;
+  padding-bottom: 0.3em;
+  /* line-height: 0.9em; */
+  max-width: 100%;
+  max-height: 100%;
+  font-size: .3em;
+  font-weight: bolder;
+  word-wrap: break-word;
+  word-break: normal;
+}
+
+.my-lists.box .title-card .text-mirror {
+  font-size: 3em;
+  visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+/*\
+ * ================
+ * Browse Lists Box
+ * ================
+\*/
 
 .browse-lists.box {
   color: var(--c-txt);
@@ -347,7 +442,7 @@ input[type='text'] {
 .footer {
   position: relative;
   bottom: 0;
-  z-index: 100;
+  z-index: 0;
   background-color: var(--c-bg);
   height: auto;
   display: flex;
@@ -356,7 +451,7 @@ input[type='text'] {
   align-items: flex-start;
   /* padding-top: 1em; */
   padding: 0em 20em 1em;
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 .footer a:hover {
@@ -404,4 +499,187 @@ input[type='text'] {
 
 .footer-col li {
   margin-bottom: 0.5em;
+}
+
+/*\
+ *
+ * ==================
+ * GENERALIZED SHADOW
+ * ==================
+ *
+\*/
+
+body .bg-shadow {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.624);
+  z-index: 75;
+}
+
+/*\
+ *
+ * ==================
+ * GENERALIZED MODALS
+ * ==================
+ *
+\*/
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20em;
+  max-width: 80%;
+  height: 20em;
+  max-height: 80%;
+  background-color: red;
+}
+
+.modal .flow {
+  /* other stuff we already covered */
+
+  /* cover the modal */
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  /* spacing as needed */
+  padding: 20px 50px 20px 20px;
+
+  /* let it scroll */
+  overflow: auto;
+}
+
+/*\
+ *
+ * =================
+ * GENERALIZED POPUP
+ * =================
+ *
+\*/
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/*\
+ *
+ * =================
+ * Create List POPUP
+ * =================
+ *
+\*/
+
+.popup.new-list {
+  z-index: 100;
+  background: none;
+  width: 30em;
+  height: 20em;
+  font-size: 1.1em;
+}
+
+.popup.new-list .title-card {
+  box-sizing: border-box;
+  position: absolute;
+  aspect-ratio: 3/4;
+  width: 10em;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -75%);
+  background-color: #f6b26b;
+  z-index: 100;
+  border-radius: var(--b-corner);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.popup.new-list .title-card .text,
+.popup.new-list .title-card .text-mirror {
+  padding: 0.2em;
+  padding-bottom: 0.3em;
+  /* line-height: 0.9em; */
+  max-width: 100%;
+  max-height: 100%;
+  font-size: 3em;
+  font-weight: bolder;
+  word-wrap: break-word;
+  word-break: normal;
+}
+
+.popup.new-list .title-card .text-mirror {
+  visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.popup.new-list .background {
+  background-color: var(--c-bg);
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  bottom: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 3em 1em 1em;
+  border-radius: var(--b-corner);
+}
+
+.popup.new-list .background .close {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  z-index: 100;
+}
+.popup.new-list .background .close svg {
+  height: 2em;
+  width: auto;
+}
+
+.popup.new-list .background .close svg * {
+  stroke: var(--c-txt);
+  stroke-width: var(--symbol-width);
+}
+
+.popup.new-list .background .close:hover svg * {
+  stroke: var(--c-txt-scnd);
+}
+
+.popup.new-list .background input {
+  width: 14em;
+  color: var(--c-txt);
+  border-bottom: 1px solid var(--c-txt);
+  margin-bottom: 0.6em;
+  font-size: 1.2em;
+  padding-bottom: 0.1em;
+  text-align: center;
+}
+
+.popup.new-list .background input::placeholder {
+  color: var(--c-txt-scnd);
+  text-align: center;
+}
+
+.popup.new-list .background button.create {
+  margin-top: 0.1em;
+  background-color: var(--c-txt);
+  color: var(--c-bg);
+  padding: 0.4em 0.6em;
+  border-radius: var(--b-corner);
+}
+
+.popup.new-list .background button.create:hover {
+  background-color: var(--c-txt-scnd);
 }
