--- a/filmliste/templates/filmliste/login.html
+++ b/filmliste/templates/filmliste/login.html
@@ -6,6 +6,7 @@
   <title>Filmliste - Login</title>
 </head>
 <body>
+  <div class="main">
   {% if messages %}
         <ul>
             {% for message in messages %}
@@ -26,5 +27,6 @@
     {{ signup.as_p }}
     <input type="submit" value="Ok">
   </form>
+</div>
 </body>
 </html>
